Addressed the issue "Submenu top - z-index #217"

--- a/src/style/_mixins.scss
+++ b/src/style/_mixins.scss
@@ -16,7 +16,7 @@
 @mixin freeze-submenu-bar{
   position: fixed !important;
   margin-top: 0 !important;
-  top: 0 !important;
+  top: 0;
   z-index: 1;
 }
 
